# Sample-Python-Project

./: .coveragerc  README.md  pylintrc  pyproject.toml
.github/workflows/: main.yml
sample_python_project/: calculator.py
tests/: test_calculator.py
