[tool.poetry]
name = "sample-python-project"
version = "0.1.0"
description = ""
authors = ["Alejandro Cuadrado Torre <alejandro.cuadrado.torre@gmail.com>"]
readme = "README.md"
packages = [{ include = "sample_python_project" }]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov --cov-branch --cov-report=term-missing --cov-report=html"
testpaths = ["tests/"]
